Issue #28871: Fixed a crash when deallocate deep ElementTree. Fixed running MiscTests in test_xml_etree_c.